--- a/molecule.yml
+++ b/molecule.yml
@@ -1,4 +1,10 @@
 ---
+ansible:
+  host_vars:
+    enabled:
+      repo_epel_enabled: yes
+    disabled:
+      repo_epel_enabled: no
 dependency:
   name: galaxy
 driver:
@@ -14,7 +20,10 @@ vagrant:
         memory: 512
         cpus: 1
   instances:
-    - name: repo-epel
+    - name: enabled
+      ansible_groups:
+        - default
+    - name: disabled
       ansible_groups:
         - default
 verifier:
