--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 ---
 language: python
 python:
- - "2.7"
- - "3.6"
+  - "2.7"
+  - "3.6"
 services:
- - docker
+  - docker
 install:
- - pip install molecule[lint,docker] docker
+  - pip install molecule[lint,docker] docker
 script:
- - molecule --version
- - ansible --version
+  - molecule --version
+  - ansible --version
+  - molecule test
